增加图形验证码

--- a/oauthcenter/src/main/resources/static/index.html
+++ b/oauthcenter/src/main/resources/static/index.html
@@ -21,6 +21,13 @@
        </tr>
 
        <tr>
+           <td>图形验证码</td>
+           <td><input type="text" name = "imageCode"></td>
+           <td><img src = "/skrshop/oauth/code/image?phone=18815799632"></td>
+       </tr>
+
+
+       <tr>
            <td colspan="2">
                <button type="submit">登录</button>
            </td>
