--- a/oauthcenter/src/main/resources/static/index.html
+++ b/oauthcenter/src/main/resources/static/index.html
@@ -9,31 +9,31 @@
 
 <h1>表单提交</h1>
 <!-- 表单提交用户信息,注意字段的设置,直接是*{} -->
-<form action="/skrshop/oauth/authentication/form"  method="post">
-   <table>
-       <tr>
-           <td>用户名</td>
-           <td><input type="text" name = "username"></td>
-       </tr>
-       <tr>
-           <td>密码</td>
-           <td><input type="password" name = "password"></td>
-       </tr>
+<form action="/skrshop/oauth/authentication/form" method="post">
+    <table>
+        <tr>
+            <td>用户名</td>
+            <td><input type="text" name="username"></td>
+        </tr>
+        <tr>
+            <td>密码</td>
+            <td><input type="password" name="password"></td>
+        </tr>
 
-       <tr>
-           <td>图形验证码</td>
-           <td><input type="text" name = "imageCode"></td>
-           <td><img src = "/skrshop/oauth/code/image?phone=18815799632"></td>
-       </tr>
+        <tr>
+            <td>图形验证码</td>
+            <td><input type="text" name="imageCode"></td>
+            <td><img src="/skrshop/oauth/code/image"></td>
+        </tr>
 
 
-       <tr>
-           <td colspan="2">
-               <button type="submit">登录</button>
-           </td>
-       </tr>
+        <tr>
+            <td colspan="2">
+                <button type="submit">登录</button>
+            </td>
+        </tr>
 
-   </table>
+    </table>
 </form>
 </body>
 
