验证登录重构

--- a/oauthcenter/src/main/resources/static/index.html
+++ b/oauthcenter/src/main/resources/static/index.html
@@ -25,7 +25,10 @@
             <td><input type="text" name="imageCode"></td>
             <td><img src="/skrshop/oauth/code/image"></td>
         </tr>
-
+        <tr>
+            <td>密码</td>
+            <td><input type="checkbox" name="rember-me" value="true">记住我</td>
+        </tr>
 
         <tr>
             <td colspan="2">
