--- a/oauthcenter/src/main/resources/static/index.html
+++ b/oauthcenter/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<h1>表单提交</h1>
+<h1>验证码登录</h1>
 <!-- 表单提交用户信息,注意字段的设置,直接是*{} -->
 <form action="/skrshop/oauth/authentication/form" method="post">
     <table>
@@ -24,6 +24,34 @@
             <td>图形验证码</td>
             <td><input type="text" name="imageCode"></td>
             <td><img src="/skrshop/oauth/code/image"></td>
+        </tr>
+        <tr>
+            <td>密码</td>
+            <td><input type="checkbox" name="rember-me" value="true">记住我</td>
+        </tr>
+
+        <tr>
+            <td colspan="2">
+                <button type="submit">登录</button>
+            </td>
+        </tr>
+
+    </table>
+</form>
+
+
+<h3>短信登录</h3>
+<!-- 表单提交用户信息,注意字段的设置,直接是*{} -->
+<form action="/skrshop/oauth/authentication/mobile" method="post">
+    <table>
+        <tr>
+            <td>用户名</td>
+            <td><input type="text" name="phone" value="18815799632"></td>
+        </tr>
+        <tr>
+            <td>短信验证码</td>
+            <td><input type="text" name="smsCode"></td>
+            <a href="/skrshop/oauth/code/sms?phone=18815799632">发送短信验证码 </a>
         </tr>
         <tr>
             <td>密码</td>
