增加日志打印

--- a/oauthcenter/src/main/resources/static/login.html
+++ b/oauthcenter/src/main/resources/static/login.html
@@ -23,11 +23,7 @@
         <tr>
             <td>图形验证码</td>
             <td><input type="text" name="imageCode"></td>
-            <td><img src="/skrshop/oauth/code/image"></td>
-        </tr>
-        <tr>
-            <td>密码</td>
-            <td><input type="checkbox" name="rember-me" value="true">记住我</td>
+            <td><img src="/skrshop/oauth/validate/image"></td>
         </tr>
 
         <tr>
@@ -46,16 +42,12 @@
     <table>
         <tr>
             <td>用户名</td>
-            <td><input type="text" name="phone" value="18815799632"></td>
+            <td><input type="text" name="mobile" value="18815799632"></td>
         </tr>
         <tr>
             <td>短信验证码</td>
             <td><input type="text" name="smsCode"></td>
-            <a href="/skrshop/oauth/code/sms?phone=18815799632">发送短信验证码 </a>
-        </tr>
-        <tr>
-            <td>密码</td>
-            <td><input type="checkbox" name="rember-me" value="true">记住我</td>
+            <a href="/skrshop/oauth/validate/sms?phone=18815799632">发送短信验证码 </a>
         </tr>
 
         <tr>
