增加日志打印

--- a/oauthcenter/src/main/resources/static/login.html
+++ b/oauthcenter/src/main/resources/static/login.html
@@ -47,7 +47,7 @@
         <tr>
             <td>短信验证码</td>
             <td><input type="text" name="smsCode"></td>
-            <a href="/skrshop/oauth/validate/sms?phone=18815799632">发送短信验证码 </a>
+            <a href="/skrshop/oauth/validate/sms?mobile=18815799632">发送短信验证码 </a>
         </tr>
 
         <tr>
